# dobologer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: api.rs  config.rs  engine.rs  index.rs  ingest.rs  lib.rs  main.rs  net.rs  query.rs  tokenizer.rs
src/block/: active.rs  format.rs  mod.rs  reader.rs  writer.rs
tests/: integration_test.rs
ui/: index.html
