[package]
name = "dobologer"
version = "0.1.0"
edition = "2021"

[lib]
name = "dobologer"
path = "src/lib.rs"

[[bin]]
name = "dobologer"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
bitpacking = "0.9"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
zstd = "0.13"
rayon = "1"
